@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-01T01:09:04Z",
+  "timestamp" : "2022-06-01T16:17:45Z",
   "count_outdated" : 308,
   "uniques_outdated" : 160,
   "count" : 336,
-  "uniques" : 180,
+  "uniques" : 181,
   "clones" : [
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -53,6 +53,13 @@
       "count_minmax": [ 1, 4 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
+    },
+    {
+      "timestamp": "2022-06-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
