@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -36,6 +36,11 @@
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-06-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
